--- a/sass/_friendFeed.scss
+++ b/sass/_friendFeed.scss
@@ -1,8 +1,9 @@
 #friendFeed {
   width: 55%;
-  display: inline-flex;
+  display: inline-block;
   overflow: hidden;
   float: right;
   position: absolute;
-  margin-left: 30%;
+  margin-left: 5%;
+  color: black;
 }
