--- a/sass/_themes.scss
+++ b/sass/_themes.scss
@@ -1,15 +1,19 @@
 html, body {
   width: 90%;
 }
-.mainContainer {
+#mainContainer {
   width: 80%;
   height: 100%;
+  display: inline-flex;
 }
 .nav-bar {
-  
+
 }
 header, footer {
   text-align: center;
   background-color: black;
   color: white;
+}
+.hidden {
+  display: none;
 }
